<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/gotCharacter_img"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="Image du personnage" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:id="@+id/linear_layout"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/gotCharacter_img"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gotCharacter_full_name"
            android:text="@string/gotCharacter_full_name"
            android:layout_margin="5dp"
            android:textSize="20sp"
            app:layout_constraintLeft_toRightOf="@+id/gotCharacter_img" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gotCharacter_first_name"
            android:text="@string/gotCharacter_first_name"
            android:layout_margin="5dp"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/gotCharacter_full_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gotCharacter_last_name"
            android:text="@string/gotCharacter_last_name"
            android:layout_margin="5dp"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/gotCharacter_first_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gotCharacter_title"
            android:text="@string/gotCharacter_title"
            android:layout_margin="5dp"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/gotCharacter_last_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gotCharacter_family"
            android:text="@string/gotCharacter_family"
            android:layout_margin="5dp"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/gotCharacter_family"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>